// MEDINV 

// --- UTILIZADORES (autenticação e controlo de acesso por perfil) ---
Table utilizadores {
  id          int         [pk, increment]
  nome        varchar(100) [not null]
  email       varchar(150) [not null, unique]
  perfil      enum('administrador', 'tecnico', 'profissional_saude') [not null, default: 'tecnico']
  ativo       boolean [not null, default: true]
  password    varchar(255) [not null]
}

// --- LOGS (registo de eventos do sistema) ---
Table logs {
  id                int          [pk, increment]
  data_hora         datetime     [not null, default: `now()`]
  utilizador_id     int
  utilizador_email  varchar(150)
  acao              varchar(100) [not null]
  modulo            varchar(50)  [not null]
  descricao         text
  ip                varchar(45)
  sucesso           boolean      [not null, default: true]
}

// --- LOCALIZAÇÕES ---
Table localizacoes {
  id             int         [pk, increment]
  codigo         varchar(20) [not null, unique]
  edificio       enum('Principal', 'Bloco B', 'Bloco C') [not null]
  piso           enum('0', '1', '2', '3')  [not null]
  servico_id     int          [not null]
  sala           varchar(50)  [not null]
  observacoes    text
  ativo          boolean [not null, default: true]
}

// --- FORNECEDORES ---
Table fornecedores {
  id                  int          [pk, increment]
  codigo              varchar(20)  [not null, unique]
  nome                varchar(150) [not null]
  nif                 varchar(20)  [not null, unique]
  telefone            varchar(20)  [not null]
  email               varchar(150) [not null]
  morada              text         [not null]
  website             varchar(255)
  pessoa_contacto     varchar(100) [not null]
  telefone_contacto   varchar(20)  [not null]
  email_contacto      varchar(150)
  tipo_id             int          [not null]
  observacoes         text
  ativo               boolean [not null, default: true]
}

// --- EQUIPAMENTOS (entidade central) ---
Table equipamentos {
  id                  int          [pk, increment]
  codigo              varchar(50)  [not null, unique]
  designacao          varchar(150) [not null]
  categoria_id        int          [not null]
  marca               varchar(100) [not null]
  modelo              varchar(100) [not null]
  numero_serie        varchar(100) [not null]
  fabricante          varchar(150)
  data_aquisicao      date
  ano_fabrico         year
  custo_aquisicao     decimal(10,2)
  tipo_entrada        enum('compra', 'doacao', 'aluguer', 'emprestimo') [not null, default: 'compra']
  estado              enum('ativo', 'em_manutencao', 'inativo', 'em_calibracao', 'em_quarentena', 'abatido') [not null, default: 'ativo']
  criticidade         enum('baixa', 'media', 'alta', 'suporte_de_vida') [not null]
  localizacao_id      int          [not null]
  observacoes         text
}

// --- EQUIPAMENTO ↔ FORNECEDOR (N:M, com tipo de relação) ---
Table equipamento_fornecedor {
  id               int  [pk, increment]
  equipamento_id   int  [not null]
  fornecedor_id    int  [not null]
  tipo_id          int  [not null]
  observacoes      text
}

// --- DOCUMENTOS ---
Table documentos {
  id               int          [pk, increment]
  codigo           varchar(20)  [not null, unique]
  equipamento_id   int          [not null]
  fornecedor_id    int          
  tipo_id          int          [not null]  
  nome             varchar(200) [not null]
  data_documento   date
  data_validade    date
  ficheiro_path    varchar(500)
  observacoes      text
}

// --- GARANTIAS ---
Table garantias {
  id                   int          [pk, increment]
  codigo               varchar(20)  [not null, unique]
  equipamento_id       int          [not null]
  tipo_id              int          [not null]
  data_inicio          date         [not null]
  data_fim             date         [not null]
  entidade_responsavel varchar(150)
  estado               enum('ativa', 'expirada', 'cancelada') [not null, default: 'ativa']
  ficheiro_path        varchar(500)
  observacoes          text
}

// --- CONTRATOS ---
Table contratos {
  id                   int          [pk, increment]
  codigo               varchar(20)  [not null, unique]
  equipamento_id       int          [not null]
  tipo_id              int          [not null]
  data_inicio          date         [not null]
  data_fim             date         [not null]
  entidade_responsavel varchar(150)
  periodicidade        enum('mensal', 'trimestral', 'semestral', 'anual')
  estado               enum('ativo', 'expirado', 'cancelado') [not null, default: 'ativo']
  ficheiro_path        varchar(500)
  observacoes          text
}

// --- CONTEÚDOS DO SITE (área pública, editável pelo administrador) ---
Table conteudos_site {
  id       int          [pk, increment]
  chave    varchar(100) [not null, unique]
  valor    text         [not null]
}

// --- MENSAGENS DE CONTACTO (formulário público) ---
Table mensagens_contacto {
  id           int          [pk, increment]
  nome         varchar(100) [not null]
  email        varchar(150) [not null]
  telefone     varchar(20)
  assunto      varchar(100) [not null]
  mensagem     text         [not null]
  data_envio   datetime     [not null, default: `now()`]
  lida         boolean      [not null, default: false]
}

// --- TABELAS DE APOIO (lookup) ---
Table tipos_documento {
  id int [pk, increment]
  nome varchar(100) [not null, unique]
  tem_validade boolean [not null]
}

Table servicos {
  id int [pk, increment]
  nome varchar(100) [not null, unique]
  descricao text
}

Table tipos_garantia {
  id    int          [pk, increment]
  nome  varchar(100) [not null, unique]
}

Table tipos_contrato {
  id    int          [pk, increment]
  nome  varchar(100) [not null, unique]
}

Table tipos_fornecedor {
  id    int          [pk, increment]
  nome  varchar(100) [not null, unique]
}

Table categorias_equipamento {
  id int [pk, increment]
  nome varchar(100) [not null, unique]
  descricao text
}

// ============================================================
// RELAÇÕES
// ============================================================

// Logs
Ref: logs.utilizador_id > utilizadores.id

// Localização
Ref: localizacoes.servico_id > servicos.id

// Equipamentos
Ref: equipamentos.localizacao_id > localizacoes.id
Ref: equipamentos.categoria_id > categorias_equipamento.id

// Equipamento ↔ Fornecedor
Ref: equipamento_fornecedor.equipamento_id > equipamentos.id
Ref: equipamento_fornecedor.fornecedor_id > fornecedores.id
Ref: equipamento_fornecedor.tipo_id > tipos_fornecedor.id

// Documentação
Ref: documentos.equipamento_id > equipamentos.id
Ref: documentos.fornecedor_id > fornecedores.id
Ref: documentos.tipo_id > tipos_documento.id

// Garantias
Ref: garantias.equipamento_id > equipamentos.id
Ref: garantias.tipo_id > tipos_garantia.id

// Contratos
Ref: contratos.equipamento_id > equipamentos.id
Ref: contratos.tipo_id > tipos_contrato.id

// Fornecedor
Ref: fornecedores.tipo_id > tipos_fornecedor.id